--- a/FileRead/FileRead.cbp
+++ b/FileRead/FileRead.cbp
@@ -31,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="MyCPUBench.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
